--- a/webapp/view/ItemDialog.fragment.xml
+++ b/webapp/view/ItemDialog.fragment.xml
@@ -1,7 +1,7 @@
 <core:FragmentDefinition id="idFragment" xmlns="sap.m" xmlns:core="sap.ui.core" xmlns:mvc="sap.ui.core.mvc" xmlns:form="sap.ui.layout.form"
 	xmlns:layout="sap.ui.layout">
 	<Dialog id="idDialog" title="Item do pedido Web" icon="sap-icon://add-product" busyIndicatorDelay="0" contentWidth="93%" busy="false" contentHeight="96%"
-		stretchOnPhone="true">
+		stretch="true">
 		<content>
 			<form:SimpleForm minWidth="1024" maxContainerCols="2" editable="true" layout="ResponsiveGridLayout" labelSpanL="1" labelSpanM="1"
 						emptySpanL="1" emptySpanM="1" columnsL="2" columnsM="2" class="editableForm">
@@ -51,6 +51,16 @@
 							<layout:GridData span="L4 M2"/>
 						</layoutData>
 					</Input>
+					<Label text="Preço UN">
+						<layoutData>
+							<layout:GridData span="L2 M2"/>
+						</layoutData>
+					</Label>
+					<Input id="idPrecoUN" value="{path: 'modelItemPedido>/valorUnitario', type: 'sap.ui.model.type.Float', formatOptions: {milharSeparetor: '.', decimalSeparator: ',', maxFractionDigits: 2, minFractionDigits : 2 }, constraints : { minimum: '0', maximum: '99' }}" class="desabilitado" editable="true" change="onChangePrecoVenda" submit="onFocus" type="Text">
+						<layoutData>
+							<layout:GridData span="L4 M2"/>
+						</layoutData>
+					</Input>
 					<Label text="Preço de Venda">
 						<layoutData>
 							<layout:GridData span="L2 M2"/>
@@ -66,7 +76,7 @@
 							<layout:GridData span="L2 M2"/>
 						</layoutData>
 					</Label>
-					<Image id="idImgProduto" visible="false" width="100%" height="70%">
+					<Image id="idImgProduto" visible="false" width="100%" height="70%" tooltip="Ilustração do Produto">
 						<layoutData>
 							<layout:GridData span="L2 M2"/>
 						</layoutData>
