--- a/webapp/view/enviarPedidos.view.xml
+++ b/webapp/view/enviarPedidos.view.xml
@@ -29,15 +29,15 @@
 					<Column minScreenWidth="550px" demandPopin="true" popinDisplay="Inline">
 						<Text text="Valor total"/>
 					</Column>
-					<Column minScreenWidth="320px" hAlign="Left" width="60px" popinDisplay="Inline">
+					<Column minScreenWidth="320px" hAlign="Left" width="80px" popinDisplay="Inline">
 						<Text text="Status"/>
 					</Column>
 				</columns>
 				<items>
 					<ColumnListItem type="Active">
-						<customData>
-							<core:CustomData key="mydataPED" value="{path: 'PedidosEnviar>idStatusPedido', type: 'sap.ui.model.type.String'}" writeToDom="true"/>
-						</customData>
+						<!--<customData>-->
+						<!--	<core:CustomData key="mydataPED" value="{path: 'PedidosEnviar>idStatusPedido', type: 'sap.ui.model.type.String'}" writeToDom="true"/>-->
+						<!--</customData>-->
 						<cells>
 							<Text text="{path : 'PedidosEnviar>kunnr'}"/>
 							<Text text="{path : 'PedidosEnviar>nrPedCli'}"/>
