--- a/webapp/view/Menu.view.xml
+++ b/webapp/view/Menu.view.xml
@@ -1,23 +1,36 @@
-<mvc:View height="100%" xmlns:core="sap.ui.core" controllerName="testeui5.controller.Menu" xmlns:mvc="sap.ui.core.mvc"
-	xmlns:l="sap.ui.layout" xmlns:u="sap.ui.unified" xmlns="sap.m" xmlns:app="http://schemas.sap.com/sapui5/extension/sap.ui.core.CustomData/1">
+<mvc:View height="100%" controllerName="testeui5.controller.Menu" xmlns="sap.m" xmlns:mvc="sap.ui.core.mvc" xmlns:u="sap.ui.unified"
+	xmlns:l="sap.ui.layout" xmlns:app="http://schemas.sap.com/sapui5/extension/sap.ui.core.CustomData/1">
 	<Page class="backgroundAzul" title="Força de vendas" showHeader="false">
 		<TileContainer id="container" tileDelete="handleTileDelete" tiles="{menu>/Principal}">
-			<StandardTile class="backgroundAzul1"  icon="sap-icon://{menu>icon}" type="{menu>type}" number="{menu>number}" numberUnit="{menu>numberUnit}" title="{menu>title}"
-				info="{menu>info}" infoState="{menu>infoState}" busy="{menu>busy}" busyIndicatorDelay="0" busyIndicatorSize="Medium" app:opcao="{menu>id}" press="onTile" visible="{menu>visible}"/> 
+			<StandardTile class="backgroundAzul1" icon="sap-icon://{menu>icon}" type="{menu>type}" number="{menu>number}" numberUnit="{menu>numberUnit}"
+				title="{menu>title}" info="{menu>info}" infoState="{menu>infoState}" busy="{menu>busy}" busyIndicatorDelay="0" busyIndicatorSize="Medium"
+				app:opcao="{menu>id}" press="onTile" visible="{menu>visible}"/>
 		</TileContainer>
+		
+		<!--<GenericTile class="sapUiTinyMarginBegin sapUiTinyMarginTop tileLayout" header="{menu>/Principal>title}" subheader="{menu>/Principal>subTittle}" press="press">-->
+		<!--	<TileContent unit="{menu>/Principal>numberUnit}" footer="{menu>/Principal>infoState}" >-->
+		<!--		<NumericContent value="{menu>/Principal>number}" icon="sap-icon://{menu>/Principal>icon}"/>-->
+		<!--	</TileContent>-->
+		<!--</GenericTile>-->
+		<!--<GenericTile class="sapUiTinyMarginBegin sapUiTinyMarginTop tileLayout" header="Cumulative Totals" subheader="Expenses" press="press">-->
+		<!--	<TileContent unit="Unit" footer="Footer Text">-->
+		<!--		<NumericContent value="12"/>-->
+		<!--	</TileContent>-->
+		<!--</GenericTile>-->
+		
 		<!--<footer>-->
 		<!--	<Bar>-->
 		<!--		<contentLeft>-->
 		<!--			<Text id="idAtualizacao" text="Atual: {modelAux>/DataAtualizacao}" />-->
-					<!--{modelAux>/dataUltimoUpdate}-->
+		<!--{modelAux>/dataUltimoUpdate}-->
 		<!--		</contentLeft>-->
 		<!--		<contentRight>-->
 		<!--			<Label text="Versão: {modelAux>/VersaoApp}" ></Label>-->
-					<!--<Label text="{modelAux>/nomeEmpresa}"/>-->
+		<!--<Label text="{modelAux>/nomeEmpresa}"/>-->
 		<!--		</contentRight>-->
-				<!--<contentMiddle>-->
-				<!--	<Label text="v2.15" class="sapUiMediumMarginEnd"></Label>-->
-				<!--</contentMiddle>-->
+		<!--<contentMiddle>-->
+		<!--	<Label text="v2.15" class="sapUiMediumMarginEnd"></Label>-->
+		<!--</contentMiddle>-->
 		<!--	</Bar>-->
 		<!--</footer>-->
 	</Page>
