--- a/webapp/view/MenuConsultas.view.xml
+++ b/webapp/view/MenuConsultas.view.xml
@@ -1,8 +1,7 @@
 <mvc:View height="100%" controllerName="testeui5.controller.MenuConsultas" xmlns:mvc="sap.ui.core.mvc" xmlns:l="sap.ui.layout"
-	xmlns:core="sap.ui.core" xmlns:u="sap.ui.unified" xmlns="sap.m" xmlns:app="http://schemas.sap.com/sapui5/extension/sap.ui.core.CustomData/1">
-	<Page class="backgroundAzul" id="page" title="Tipos de Consultas" showNavButton="true" navButtonPress="onNavBack" showHeader="true"
-		enableScrolling="false">
-		<TileContainer id="container" tileDelete="handleTileDelete" tiles="{menu>/Consultas}">
+	xmlns:u="sap.ui.unified" xmlns="sap.m" xmlns:app="http://schemas.sap.com/sapui5/extension/sap.ui.core.CustomData/1">
+	<Page class="backgroundAzul" showHeader="false">
+		<TileContainer id="container" tileDelete="handleTileDelete" tiles="{menu>/Consultas}" >
 			<StandardTile class="backgroundAzul1" icon="sap-icon://{menu>icon}" type="{menu>type}" number="{menu>number}" numberUnit="{menu>numberUnit}" title="{menu>title}"
 				info="{menu>info}" infoState="{menu>infoState}" app:opcao="{menu>id}" press="onTileConsultas" visible="{menu>visible}"/>
 		</TileContainer>
